ScopedValueTimeoutInterceptor